tests/baselines/reference/knockout.errors.txt
knockout.ts(1,18): error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
knockout.ts(21,20): error TS2339: Property 'd' does not exist on type 'Observable<string>'.


==== knockout.ts (2 errors) ====
      declare module ko {
                     ~~
!!! error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
       export interface Observable<T> {
         (): T;
         (value: T): any;
         N: number;
         g: boolean;
         r: T;
       }
       export function observable<T>(value: T): Observable<T>;
     }
     var o = {
         name: ko.observable("Bob"),
         age: ko.observable(37)
     }
     var x_v = o.name().length
     var age_v = o.age();
     var name_v = o.name("Robert");
     var zz_v = o.name.N;
     var yy_v = o.name.g;
     var rr_v = o.name.r;
     var dd_v = o.name.d;
                       ~
!!! error TS2339: Property 'd' does not exist on type 'Observable<string>'.
    